--- a/src/components/Cards/Cardsmodule.css
+++ b/src/components/Cards/Cardsmodule.css
@@ -1,3 +1,20 @@
 .cardbox{
     border: 1px solid red;
 }
+.cardrow{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row; 
+    border: 1px solid yellowgreen;
+}
+.c1,.c2,.c3,.c4{
+ width: 10em;
+ height: 5em;
+ border: 1px solid peru;
+}
+.row2{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    border: 1px solid yellow;
+}
